WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301500
[WTF] Fix preprocessor directives for `permanentlyFreezePages`
https://bugs.webkit.org/show_bug.cgi?id=301500
Summary
[WTF] Fix preprocessor directives for `permanentlyFreezePages`
Sosuke Suzuki
Reported
2025-10-26 23:46:43 PDT
With the current implementation, the compiler warns about unused vars when building for DARWIN without using the COCOA platform.
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2025-10-26 23:47:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53023
EWS
Comment 2
2025-10-27 19:56:10 PDT
Committed
302220@main
(7993baa067e0): <
https://commits.webkit.org/302220@main
> Reviewed commits have been landed. Closing PR #53023 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-27 19:57:11 PDT
<
rdar://problem/163531577
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug