[WTF] Fix preprocessor directives for `permanentlyFreezePages` https://bugs.webkit.org/show_bug.cgi?id=301500

Reviewed by Yusuke Suzuki.

With the current implementation, the compiler warns about unused vars when building
for DARWIN without using the COCOA platform.

This patch fixes that.

* Source/WTF/wtf/WTFConfig.cpp:
(WTF::permanentlyFreezePages):

Canonical link: https://commits.webkit.org/302220@main